--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         
         <variable
             name="buttonHandler"
-            type="com.android.uraall.mycontacts.MainActivity.MainActivityButtonHandler" />
+            type="com.android.sergeiekgaus.myFriendList.MainActivity.MainActivityButtonHandler" />
         
     </data>
 
